<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.olahbence.sporttracker.Tracking.TrackingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            app:indicatorColor="@color/blue"
            app:indicatorName="BallZigZagDeflectIndicator" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <fragment
            android:id="@+id/mapTracking"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/mapTracking"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/current_position"
            android:onClick="focus"
            android:src="@drawable/ic_focus" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            style="@style/TrackingText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/time" />

        <TextView
            android:id="@+id/distance"
            style="@style/TrackingText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/distance" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/avarage_pace"
            style="@style/TrackingText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/avarage_pace" />

        <TextView
            android:id="@+id/current_pace"
            style="@style/TrackingText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/current_pace" />


    </LinearLayout>

    <TextView
        android:id="@+id/positionTimeTest"
        style="@style/TrackingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_time" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save"
            style="@style/MapBigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/saving_avi"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:onClick="toSave"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:text="@string/save" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/saving_avi"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:indicatorColor="@color/blue"
            app:indicatorName="BallZigZagDeflectIndicator" />

    </RelativeLayout>


</LinearLayout>
