<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />

        <fragment
            android:id="@+id/mapMain"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center" />

        <com.devspark.robototextview.widget.RobotoButton
            android:id="@+id/button2"
            style="@style/MapBigButton"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:onClick="startTrack"
            android:text="@string/start_tracking" />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/current_data"
            android:onClick="currentData"
            android:src="@drawable/ic_info_black_24dp" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/gps_fixed"
            style="@style/MapText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/gps_fixed"
            android:textAlignment="center" />


        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/satellite_fixed"
            style="@style/MapText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/gps_fixed"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/number_of_fixed_satellites"
            android:textAlignment="center" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/satellite_in_view"
            style="@style/MapText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/satellite_fixed"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/number_of_satellites"
            android:textAlignment="center" />
    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/dark"
        android:choiceMode="singleChoice"
        android:divider="@drawable/double_divider"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>