<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lin_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:background="@color/blue_transparent"
                android:theme="@style/TextInput">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/white" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="32dp"
                android:background="@color/blue_transparent"
                android:theme="@style/TextInput"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:orientation="horizontal">

                <Button
                    style="@style/MapBigButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    android:onClick="login"
                    android:text="@string/login" />

                <Button
                    style="@style/MapBigButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="register"
                    android:text="@string/register" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
